updated packages, alignment fixes

--- a/client/src/api/Alchemy.css
+++ b/client/src/api/Alchemy.css
@@ -28,7 +28,9 @@
 .cards {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
 }
 .card-content {
